Made the Wishing Star edits :)

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
     text-align: center;
+    margin-bottom: 10%;
 }
 
 .App-logo {
@@ -15,7 +16,7 @@
 
 .App-header {
     width: 100%;
-    background-color: #282c34;
+    background-color: #5cb1c6;
     min-height: 40vh;
     display: flex;
     flex-direction: column;
@@ -36,4 +37,10 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+ol {
+    list-style-position: inside;
+    text-align: left;
+    margin-left: 33%;
 }
